src/network_policies/test1default-fluidos-consumer-792ecdc8fd6b2fc2db787707fa856cfec7844565f2682651016fcbb9075d60ad7f3176 Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-792ecdc8fd6b2fc2db787707fa856cfec7844565f2682651016fcbb9075d60ad7f3176
  namespace: default-fluidos-consumer-792ecd
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring-fluidos-consumer-792ecd
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
